add trip-note-property (#38)
