# server/internal/pkg/entities/trip.go
@@ -4,25 +4,40 @@ import (
 	"time"
 )
 
+type Bound int
+
+const (
+	SpiralBound Bound = iota
+	GlueBound
+)
+
+type Note struct {
+	Bound      Bound
+	NoteColor  string
+	BoundColor string
+}
+
 type Trip struct {
 	id            int
 	name          string
 	budget        float64
 	countryId     int
 	description   string
+	note          Note
 	startDateTime time.Time
 	endDateTime   time.Time
 	createdAt     time.Time
 	updatedAt     time.Time
 }
 
-func NewTrip(id int, name string, budget float64, countryId int, description string, startDateTime time.Time, endDateTime time.Time, createdAt time.Time, updatedAt time.Time) *Trip {
+func NewTrip(id int, name string, budget float64, countryId int, description string, note Note, startDateTime time.Time, endDateTime time.Time, createdAt time.Time, updatedAt time.Time) *Trip {
 	return &Trip{
 		id:            id,
 		name:          name,
 		budget:        budget,
 		countryId:     countryId,
 		description:   description,
+		note:          note,
 		startDateTime: startDateTime,
 		endDateTime:   endDateTime,
 		createdAt:     createdAt,
@@ -50,10 +65,25 @@ func (t *Trip) Description() string {
 	return t.description
 }
 
+func (t *Trip) Note() Note {
+	return t.note
+}
+
 func (t *Trip) StartDateTime() time.Time {
 	return t.startDateTime
 }
 
 func (t *Trip) EndDateTime() time.Time {
 	return t.endDateTime
+}
+
+func (b Bound) String() string {
+	switch b {
+	case SpiralBound:
+		return "SpiralBound"
+	case GlueBound:
+		return "GlueBound"
+	default:
+		return "UnknownBound"
+	}
 }
